Implemented command for extracting pull request lifetime data Add launch settings example to README Code Cleanup

--- a/src/GitHub.PullRequest.ConsoleApp/Properties/launchSettings.json
+++ b/src/GitHub.PullRequest.ConsoleApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GitHub.PullRequest.Console": {
       "commandName": "Project",
-      "commandLineArgs": "pr approvers -o racwa -r github-repo-management"
+      "commandLineArgs": "pr lifetime -o racwa -r github-repo-management"
     }
   }
 }
